# realsense_object_detection

./: CMakeLists.txt  package.xml
launch/: realsense_object_detection.launch
scripts/: RealsenseObjectDetectorNode.py
